# GameBoyEmulator

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  imgui.ini
.github/workflows/: cmake.yml
cmake/: imgui.cmake
emulator/: CMakeLists.txt
emulator/inc/: bus.h  emulator_exception.h  logger.h
emulator/inc/cartridge/: cartridge.h  cartridge_header.h  mbc1_cart.h  rom_only_cart.h
emulator/inc/cpu/: common.h  cpu.h  regs.h
emulator/inc/io/: interrupts.h  joypad.h
emulator/inc/memory/: video_ram.h
emulator/inc/ppu/: ppu.h  ppu_types.h
emulator/src/: bus.cpp  ppu.cpp
emulator/src/cartridge/: cartridge.cpp  cartridge_header.cpp  mbc1_cart.cpp  rom_only_cart.cpp
emulator/src/cpu/: cpu.cpp
emulator/src/io/: interrupts.cpp  timer.cpp
emulator/src/memory/: video_ram.cpp
inc/: disassembler.h  gui.h  gui_logger.h  renderer.h
include/: bus.h  cpu.h  disassembler.h  ppu.h  read_write_interface.h
include/cartridge/: cartridge.h
include/cpu/: cpu.h  regs.h
include/gui/: gui.h
include/io/: interrupts.h  io.h  timer.h
src/: bus.cpp  disassembler.cpp  gui.cpp  gui_logger.cpp  main.cpp  ppu.cpp  renderer.cpp
src/cartridge/: cartridge.cpp
src/cpu/: cpu.cpp
src/gui/: gui.cpp
src/io/: interrupts.cpp  io.cpp  joypad.cpp  timer.cpp
src/memory/: video_ram.cpp
test/: CMakeLists.txt
test/inc/: console_logger.h  mock_bus.h
test/inc/wrappers/: bus_wrapper.h  cpu_wrapper.h
test/src/: console_logger.cpp  mock_bus.cpp  test_alu.cpp  test_cpu_instr_blargg.cpp  test_jumps.cpp
test/src/wrappers/: bus_wrapper.cpp  cpu_wrapper.cpp
